--- a/css/stylepl.css
+++ b/css/stylepl.css
@@ -169,6 +169,9 @@ tr:nth-child(even) {
         background-attachment: fixed; /* 关键属性，使背景固定 */
         background-position: center;
     }
+    .title {
+    color: black;
+}
 }
  /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 400px) {
