--- a/css/stylem.css
+++ b/css/stylem.css
@@ -31,6 +31,7 @@ body {
     position: sticky;
     overflow: hidden;
     background-color: #bdb6ec;
+    opacity: 70%;
 }
 
 /* Style the topnav links */
